# onnx-agent

./: README.md  pyproject.toml  setup.py  temp_optimized_model.onnx  test_config.yaml
logs/: phase_1_infrastructure.md  phase_2_test_time_compute.md  test_results_2025_02_23.md
plans/: 00_overview.md  01_infrastructure.md  02_test_time_compute.md  03_optimization_hardware.md  04_integration_e2e.md  05_llm_integration.md
research/: readme.md
src/onnx_agent/: __init__.py
src/onnx_agent/cli/: __init__.py  commands.py  interface.py  main.py  utils.py
src/onnx_agent/infrastructure/: __init__.py  config.py  dspy_integration.py  export.py  project.py
src/onnx_agent/optimization/hardware/: __init__.py  optimizer.py  providers.py  quantization.py
src/onnx_agent/test_time_compute/: __init__.py  iterative.py  tta.py  ttt.py
test_models/: test_model.onnx
tests/infrastructure/: __init__.py  conftest.py  test_dspy_integration.py  test_onnx_export.py  test_project_structure.py
tests/integration/: __init__.py  conftest.py
tests/integration/cli/: test_command_validation.py  test_main.py  test_progress_reporting.py  test_result_handling.py
tests/integration/pipeline/: base_tests.py  test_advanced_scenarios.py  test_basic_workflow.py  test_performance.py
tests/optimization/hardware/: __init__.py  base_tests.py  test_optimizer.py  test_providers.py  test_quantization.py
tests/test_time_compute/: __init__.py  base_tests.py  test_iterative.py  test_tta.py  test_ttt.py
